@@ -134,6 +134,12 @@
                 <version>3.1.0</version>
                 <configuration>
                     <mainClass>kmg.tool.presentation.ui.gui.InsertionSqlCreationScreenTool</mainClass>
+                    <arguments>
+                        <argument>--module-path</argument>
+                        <argument>${project.build.directory}/dependency</argument>
+                        <argument>--add-modules</argument>
+                        <argument>javafx.controls,javafx.fxml</argument>
+                    </arguments>
                 </configuration>
             </plugin>
         </plugins>
